--- a/doc/src/快捷键综述.md
+++ b/doc/src/快捷键综述.md
@@ -4,14 +4,14 @@
 
 ## 快捷键系统
 快捷键分为三类：
-* 直接按键（功能键+字符键）
-* 修饰键+直接按键（功能键+字符键）
-* 修饰键+字符键+字符键
+* 直按键（直按键是指功能键和字符键两类键）：按键次数为1，且只需要按下一个键
+* 修饰键+直接按键（功能键+字符键）：只需要按一次键，但需要同时按下多个键
+* 修饰键+字符键+字符键：需要按两次键，第一次是两个键，第二次是一个键
 
 除了快捷键，使用命令面板也是一种非常完美的交互方式，命令面板能够减少用户的心智负担，不必记下太多快捷键。  
 
 ## 修饰键
-三个修饰键：ctrl+shift+alt。忽略start，因为strat是为系统准备的。    
+三个修饰键：ctrl+shift+alt。忽略start，因为start是为系统准备的。    
 
 三个修饰按键总共有以下几种情况：
 * ctrl：最为快捷简便，最常用的功能应该由ctrl控制
