--- a/doc/src/快捷键综述.md
+++ b/doc/src/快捷键综述.md
@@ -4,19 +4,19 @@
 
 ## 快捷键系统
 快捷键分为三类：
-* 直按键（直按键是指功能键和字符键两类键）：按键次数为1，且只需要按下一个键
+* 直接按键（直接按键是指功能键和字符键两类键）：按键次数为1，且只需要按下一个键
 * 修饰键+直接按键（功能键+字符键）：只需要按一次键，但需要同时按下多个键
 * 修饰键+字符键+字符键：需要按两次键，第一次是两个键，第二次是一个键
 
 除了快捷键，使用命令面板也是一种非常完美的交互方式，命令面板能够减少用户的心智负担，不必记下太多快捷键。  
 
 ## 修饰键
-三个修饰键：ctrl+shift+alt。忽略start，因为start是为系统准备的。    
+四个修饰键：ctrl+shift+alt+meta。其中meta键也叫start键、win键等，在linux和windows上不参与快捷键，在mac上则承担了大部分ctrl的工作。
 
-三个修饰按键总共有以下几种情况：
+四个修饰按键总共有以下几种情况：
 * ctrl：最为快捷简便，最常用的功能应该由ctrl控制
-* shift：shift不能跟字符搭配使用，键盘上的字符都有两个含义，如字母有大小写。  
-* alt：alt，alt+功能键是留给系统用的，alt+字符键用户是可以使用的
+* shift：当用作快捷键时，shift不能跟字符键搭配使用，因为shift+字符键会表示字符键的另一种字符。对于字母键，shift+字母键用于切换大小写；对于非字母键，也会表示两种字符。因此，键盘上的字符都有两个含义，shift用于切换字符，所以shift用作快捷键时，不能与字符键搭配，而只能与功能键进行搭配。    
+* alt：alt，alt+功能键是留给系统用的，alt+字符键用户是可以使用的。
 * ctrl+shift：在ctrl不够用的情况下使用ctrl+shift，或者ctrl+shift表示相反语义
 * ctrl+alt：不建议使用，因为系统快捷键通常是ctrl+alt。  
 * shift+alt:很别扭的按键，不容易按到
