--- a/doc/src/磨刀不误砍柴工.md
+++ b/doc/src/磨刀不误砍柴工.md
@@ -1,3 +1,5 @@
 # 磨刀不误砍柴工
 快捷键是程序必须掌握的技能，它能够极大地提升变成效率。  
 一切能够提高生产效率的事情都是高优先级的事情。  
+
+VSCodeKeymap4IntelliJ这个目录是vscode为intellij编写的插件。模仿这个插件，我需要实现自己的快捷键插件，从而便于在intellij idea和clion之间共享快捷键。
